# ColourCube_Converter

./: .gitmodules  CMakeLists.txt  README.md
include/: Converter.h
src/: Converter.cpp  main.cpp
